syntax = "proto3";

package decider;

option go_package = "github.com/ava-labs/awm-relayer/proto/pb/decider";

service DeciderService {
  rpc ShouldSendMessage(ShouldSendMessageRequest) returns (ShouldSendMessageResponse);
}

message ShouldSendMessageRequest {
  uint32 network_id = 1;
  bytes source_chain_id = 2;
  bytes payload = 3;
  bytes bytes_representation = 4;
  bytes id = 5;
}

message ShouldSendMessageResponse {
  bool should_send_message = 1;
}
